daemata axali elementi

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <script>
-        let numbers = [10, 2, 3];
+        let numbers = [10, 2, 3, 900];
 
         var m = numbers.reduceRight(function(last, previous) {
             return last + previous;
